<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="70dp">

    <!-- Foto Profil -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/fotoprofil"
        android:scaleType="centerCrop" />

    <!-- Informasi Profil -->
    <TextView
    android:id="@+id/tv_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/nama"
    android:textSize="18sp"
    android:textStyle="bold"/>

    <TextView
    android:id="@+id/tv_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/email"
    android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/linkedin_icon"
            android:contentDescription="@string/linkedin"
            android:onClick="openLinkedInProfile"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/github_icon"
            android:contentDescription="@string/github"
            android:onClick="openGitHubProfile"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/instagram_icon"
            android:contentDescription="@string/instagram"
            android:onClick="openInstagramProfile"/>
    </LinearLayout>

</LinearLayout>
