<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_article_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_article_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/articles_name" />

        <TextView
            android:id="@+id/tv_article_longdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/description"
            android:autoLink="web"
            android:linksClickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/btn_like"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_like"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/like"
                android:onClick="toggleLike"/>

            <ImageView
                android:id="@+id/btn_dislike"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_dislike"
                android:contentDescription="@string/dislike"
                android:onClick="toggleDislike"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
